# sports-data-mcp-server

./: README.md  pyproject.toml  smithery.yaml
src/: server.py
src/tools/: football.py  multisport.py
