[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sports-data-mcp-server"
version = "0.1.0"
description = "MCP-Server für Sportdaten — Live-Scores, Tabellen, Spieler-Statistiken und historische Ergebnisse weltweit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AiAgentKarl" }]
keywords = ["mcp", "sports", "football", "soccer", "basketball", "nfl", "nba", "scores", "ai-agent", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/sports-data-mcp-server"
Repository = "https://github.com/AiAgentKarl/sports-data-mcp-server"
Issues = "https://github.com/AiAgentKarl/sports-data-mcp-server/issues"

[project.scripts]
sports-data-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
